welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:6: error: '}' expected but 'case' found.
	}	case (_,_)=> return false		
                ^