welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {

	(temp, isSummer) match {
		case (temp,isSummer) if (temp<=90 && temp>60 && isSummer=false) => return true		
		case (temp,isSummer) if (temp<=100 && temp>60 && isSummer=true) => return true		
	}	case (_,_)=> return false		
	
}
